fixed all quicklinks z-index and background problems

--- a/less/uw.quicklinks.less
+++ b/less/uw.quicklinks.less
@@ -3,25 +3,25 @@
     position:relative;
     width: 100%;
     height: 100%;
-    transition: margin-left .5s cubic-bezier(0.165, 0.84, 0.44, 1);
-    // transition: transform .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    //transition: margin-left .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform .5s cubic-bezier(0.165, 0.84, 0.44, 1);
     // z-index:10;
     margin-left:0;
     background-color: white;
-    box-shadow: 10px 0px 11px -6px #1f1f1f;
 
     #quicklinks
     {
         position: absolute;
         background-color: #4d4d4d;
-        z-index: -2;
+        //z-index: -2;
         top: 0px;
-        right: -150px;
+        //right: -150px;
+        right: 0px;
         height: 100%;
         width: 300px;
-        transition: right .5s cubic-bezier(0.165, 0.84, 0.44, 1);
-        // transition: transform .5s;
-        // transform: matrix(1, 0, 0, 1, 150, 0);
+        //transition: right .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+        transition: transform .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+        transform: matrix(1, 0, 0, 1, 150, 0);
 
         ul {
           list-style: none;
@@ -90,8 +90,8 @@
 
         &.open
         {
-          right:-300px;
-          // transform: matrix(1, 0, 0, 1, 300, 0);
+          //right:-300px;
+          transform: matrix(1, 0, 0, 1, 300, 0);
           // transform: translate3d( 0, 0, 0);
         }
 
@@ -100,8 +100,16 @@
 
     &.open
     {
-      margin-left: -300px;
-      // transform: matrix(1, 0, 0, 1, -300, 0);
+      transform: matrix(1, 0, 0, 1, -300, 0);
+    }
+
+    div#uw-container-inner {
+        position: relative;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-color: white;
+        box-shadow: 10px 0px 11px -6px #1f1f1f;
     }
 
 }
